fix #2053 better style for cookie panel on mobile devices (#2144)
* fix #2053 improved style of cookie panel for mobile devices

* improved style

--- a/web/client/themes/default/less/cookie.less
+++ b/web/client/themes/default/less/cookie.less
@@ -15,6 +15,65 @@
     right: auto;
 }
 
+
+@media (max-width: @screen-md) {
+    .mapstore-cookie-panel.see-more {
+        width: 80%;
+        left: 10%;
+        height: 100%;
+    }
+}
+@media (min-width: @screen-md) {
+    .mapstore-cookie-panel.see-more {
+        width: 50%;
+        left: 25%;
+        height: 100%;
+    }
+}
+@media (max-width: @screen-sm) {
+    .mapstore-cookie-panel.see-more {
+        width: 100%;
+        left: 0%;
+        height: 100%;
+    }
+}
+@media (max-width: 420px) {
+    .mapstore-cookie-panel.not-see-more {
+        width: 100%;
+        left: auto;
+        height: auto;
+    }
+    .cookie-action .action-button{
+        width: 70%;
+        margin-right: 15%;
+        margin-left: 15%;
+    }
+    .mapstore-cookie-panel.see-more {
+        width: 100%;
+        left: 0%;
+        height: 100%;
+    }
+}
+
+@media (min-width: 421px) {
+    .mapstore-cookie-panel.not-see-more {
+        width: 420px;
+        left: auto;
+        height: auto;
+    }
+    .cookie-action .action-button{
+        width: 33%;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+}
+@media (max-width: 250px) {
+    .cookie-action .action-button{
+        width: 100%;
+        margin-left: 0%;
+    }
+}
+
 .cookie-body-container {
     height: 100%;
     position: relative;
@@ -48,10 +107,10 @@
 
 .cookie-button {
     border-radius: 2px;
-    padding: 6px 20px;
     font-weight: bold;
     margin: 10px 0px 0px;
     border: 0px;
+    width: 100%
 }
 
 .cookie-header {
